--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/EndlessLine.loader.js";
       var config = {
-        dataUrl: buildUrl + "/EndlessLine.data.gz",
-        frameworkUrl: buildUrl + "/EndlessLine.framework.js.gz",
-        codeUrl: buildUrl + "/EndlessLine.wasm.gz",
+        dataUrl: buildUrl + "/EndlessLine.data",
+        frameworkUrl: buildUrl + "/EndlessLine.framework.js",
+        codeUrl: buildUrl + "/EndlessLine.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Game_Assets",
